--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc l-bloc " id="bloc-0">
+<div class="bloc l-bloc bloc-header" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -38,10 +38,10 @@
 						<div class="collapse navbar-collapse navbar-49444">
 							<ul class="site-navigation nav navbar-nav ms-auto">
 								<li class="nav-item">
-									<a href="index.html" class="nav-link a-btn">Home</a>
+									<a href="index.html" class="nav-link a-btn ltc-olive-drab-7">Home</a>
 								</li>
 								<li class="nav-item">
-									<a href="privacy.html" class="a-btn nav-link">Privacy</a>
+									<a href="privacy.html" class="a-btn nav-link ltc-olive-drab-7">Privacy</a>
 								</li>
 							</ul>
 						</div>
@@ -54,7 +54,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-0 -->
-<div class="bloc bloc-hero l-bloc" id="bloc-0">
+<div class="bloc l-bloc bloc-hero" id="bloc-0">
 	<div class="container bloc-sm-lg bloc-sm-md bloc-sm-sm bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -66,13 +66,13 @@
 		</div>
 		<div class="row voffset voffset-xs voffset-sm">
 			<div class="text-center text-md-start offset-lg-0 col-lg-4 col-md-4 col-sm-12">
-				<img src="img/lazyload-ph.png" data-src="img/iPhone-1.png" class="img-fluid mx-auto d-block mg-md lazyload" alt="Group" />
+				<img src="img/lazyload-ph.png" data-src="img/iPhone-3.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="iPhone 3" />
 			</div>
 			<div class="text-center text-md-start offset-lg-0 col-lg-4 col-md-4 col-sm-12">
-				<img src="img/lazyload-ph.png" data-src="img/iPhone-3.png" class="img-fluid mx-auto d-block mg-md lazyload" alt="Group" />
+				<img src="img/lazyload-ph.png" data-src="img/iPhone-2.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="Group" />
 			</div>
 			<div class="text-center text-md-start offset-lg-0 col-lg-4 col-md-4 offset-sm-0 col-sm-12">
-				<img src="img/lazyload-ph.png" data-src="img/iPhone-2.png" class="img-fluid mx-auto d-block lazyload" alt="Group%202" />
+				<img src="img/lazyload-ph.png" data-src="img/iPhone-1.jpg" class="img-fluid mx-auto d-block lazyload" alt="Group%202" />
 			</div>
 		</div>
 	</div>
@@ -89,7 +89,7 @@
 	<div class="container bloc-md-lg bloc-sm">
 		<div class="row">
 			<div class="col text-lg-start">
-				<a href="mailto:analyst06pigpens@icloud.com" class="a-btn a-block link-style text-lg-center text-center">Contact Us</a>
+				<a href="mailto:analyst06pigpens@icloud.com" class="a-btn a-block text-lg-center text-center link-footer">Contact Us</a>
 				<div><div id="flexy-foot" class="flexy-foot-control" data-footer="footer"></div>
 				</div>
 			</div>
